[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
dashmap = "5.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
